# openc6-bios

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/bios_core/: CMakeLists.txt  bios_init.c
components/bios_core/include/: bios_core.h
components/boot_manager/: CMakeLists.txt  boot_menu.c
components/boot_manager/include/: boot_manager.h  openc6_abi.h
components/management_engine/: CMakeLists.txt  management_engine.c
components/management_engine/include/: me_shared.h
components/nvram/include/: nvram_schema.h
components/power_mgmt/: power_governor.c  power_tweaker.c
components/pxe_boot/: CMakeLists.txt  pxe_boot.c
components/web_ui/: web_server.c
components/web_ui/www/: index.html
docs/: bios_core.md  boot_manager.md  openc6_fs.md
tools/: CMakeLists.txt  openc6_loader.cpp  payload.ld
tools/example/: payload.c
